# my-recommender-experiments

./: .gitignore  README.md  build.py  pytest.ini  requirements.txt  script_template.py  setup.py
easy_gold/: main.py  (+3 more)
my_recommender_experiments/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
my_recommender_experiments/.github/workflows/: pythonpackage.yml
my_recommender_experiments/conf/: recbole_config_MIND.yaml
my_recommender_experiments/feature_pipelines/: impression_separator.py  raw_input_downloader.py
my_recommender_experiments/feature_store/: feature_store_interface.py  local_file_feature_store.py
my_recommender_experiments/recommender_experiments/: __init__.py
my_recommender_experiments/recommender_experiments/dataset/: MIND_dataset.py  base_dataset.py  data_config.py
my_recommender_experiments/recommender_experiments/model/: pipeline.py  sample.py
my_recommender_experiments/recommender_experiments/model/data_flow/: __init__.py  convert_raw_input_to_atomic.py  dataset_load_task.py  dataset_preparer.py  download_raw_input.py  load_raw_input.py  raw_input_reader.py
my_recommender_experiments/recommender_experiments/utils/: template.py
my_recommender_experiments/test/feature_store/: test_local_file_feature_store.py
my_recommender_experiments/test/integration_test/: test_dataset_preparer.py
my_recommender_experiments/test/unit_test/: test_convert_raw_input_to_atomic.py  test_load_raw_input.py  test_mind_dataset.py  test_sample.py  test_split_dataset.py
my_recommender_experiments/training_pipelines/models/: language_model.py
(+55 files in other folders)
